--- a/locale/CopyContrib/pl.po
+++ b/locale/CopyContrib/pl.po
@@ -1,23 +1,26 @@
-# Copyright (C) 2014-2017 Michael Daum http://michaeldaumconsulting.com
-# This file is distributed under the same license as CopyContrib.
-# Michael Daum <daum@michaeldaumconsulting.com>, 2015.
-#
+# Foswiki translation for Polish
+# Translators:
+#   Foswiki:Main/ZbigniewKulesza, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: 2.0\n"
+"Project-Id-Version: Foswiki $Id\n"
+"Report-Msgid-Bugs-To: foswiki-svn@lists.sourceforge.net\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2014-06-10 10:44+\n"
-"Last-Translator: Michael Daum <daum@michaeldaumconsulting.com>\n"
-"Language-Team: de <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2010-09-02 07:47+0000\n"
+"Last-Translator: Daniel Kownacki <d.kownacki@gmail.com>\n"
+"Language-Team: Polish <kuleszbi@@pb.bialystok.pl>\n"
+"Language: pl\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2);\n"
+"X-Generator: Pootle 1.1.0\n"
 
 #: templates/oopscopy.tmpl:12 templates/oopscopy.tmpl:14
 #: templates/oopscopy.tmpl:16
 msgid "%1"
-msgstr ""
+msgstr "%1"
 
 #: data/System/CopyContrib.txt:134
 msgid "Allow overwrite"
@@ -25,7 +28,7 @@ msgstr ""
 
 #: data/System/CopyContrib.txt:116 data/System/CopyContrib.txt:126
 msgid "Attachments"
-msgstr ""
+msgstr "Załączniki"
 
 #: templates/oopscopy.tmpl:33
 msgid "Cannot overwrite existing destination topic [[%1]]."
@@ -36,16 +39,19 @@ msgid "Clear before copying"
 msgstr ""
 
 #: data/System/CopyContrib.txt:120 data/System/CopyContrib.txt:130
+#, fuzzy
 msgid "Comments"
-msgstr ""
+msgstr "Komentarze:"
 
 #: data/System/CopyContrib.txt:109 data/System/CopyContrib.txt:163
+#, fuzzy
 msgid "Destination"
-msgstr ""
+msgstr "Wersja"
 
 #: data/System/CopyContrib.txt:137
+#, fuzzy
 msgid "Don't log changes"
-msgstr ""
+msgstr "zmiany"
 
 #: data/System/CopyContrib.txt:124
 msgid "Exclude parts"
@@ -56,8 +62,9 @@ msgid "Filter"
 msgstr ""
 
 #: data/System/CopyContrib.txt:135
+#, fuzzy
 msgid "Force a new revision"
-msgstr ""
+msgstr "Wymuś nową zmianę"
 
 #: data/System/CopyContrib.txt:114
 msgid "Include parts"
@@ -72,16 +79,17 @@ msgid "Minor change, don't notify others"
 msgstr ""
 
 #: data/System/CopyContrib.txt:133
+#, fuzzy
 msgid "Options"
-msgstr ""
+msgstr "Akcja"
 
 #: data/System/CopyContrib.txt:118 data/System/CopyContrib.txt:128
 msgid "Parent"
-msgstr ""
+msgstr "Strona nadrzędna"
 
 #: data/System/CopyContrib.txt:117 data/System/CopyContrib.txt:127
 msgid "Preferences"
-msgstr ""
+msgstr "Preferencje"
 
 #: data/System/CopyContrib.txt:106 data/System/CopyContrib.txt:157
 msgid "Source"
@@ -89,7 +97,7 @@ msgstr ""
 
 #: data/System/CopyContrib.txt:141 data/System/CopyContrib.txt:168
 msgid "Submit"
-msgstr ""
+msgstr "Prześlij"
 
 #: templates/oopscopy.tmpl:19
 msgid "Successfully copied %1 topic(s) to [[%2.%HOMETOPIC%]]."
@@ -104,12 +112,14 @@ msgid "Successfully copied [[%1]] to [[%2]]."
 msgstr ""
 
 #: data/System/CopyContrib.txt:115 data/System/CopyContrib.txt:125
+#, fuzzy
 msgid "Text"
-msgstr ""
+msgstr "w zawartości"
 
 #: data/System/CopyContrib.txt:111
+#, fuzzy
 msgid "can be a topic or a web"
-msgstr ""
+msgstr "Przenieś stronę do działu:"
 
 #: data/System/CopyContrib.txt:121
 msgid "leave unchecked to copy all"
@@ -130,3 +140,4 @@ msgstr ""
 #: data/System/CopyContrib.txt:159
 msgid "specify source web"
 msgstr ""
+
